# wrenchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/2026-06-09-apple-m4/: REPORT.md  results.jsonl
src/wrenchmark/: __init__.py  agent.py  cli.py  mocktools.py  providers.py  report.py  runner.py  scoring.py  tasks.py
tasks/: tier1_single_call.yaml  tier2_judgment.yaml  tier3_chains.yaml
tests/: test_calibration.py  test_checks.py  test_mocktools.py  test_scoring_and_report.py  test_tasks.py
